[gd_scene load_steps=10 format=3 uid="uid://dsotiedhoi7hi"]

[ext_resource type="Script" uid="uid://b2uxmr8dtxxro" path="res://scenes/gadgets/jetpack/jetpack.gd" id="1_ik27r"]
[ext_resource type="AudioStream" uid="uid://c74sjqw2qkvei" path="res://scenes/gadgets/jetpack/startup backfire.ogg" id="2_0d65a"]
[ext_resource type="AudioStream" uid="uid://1j4qo8tkptiv" path="res://scenes/gadgets/jetpack/Jetpack sustain start.ogg" id="3_h0h1d"]
[ext_resource type="AudioStream" uid="uid://c2lv5ko8xj4ug" path="res://scenes/gadgets/jetpack/jetpack sustain loop.ogg" id="4_4rqsq"]
[ext_resource type="AudioStream" uid="uid://dhvmnnunos81u" path="res://scenes/gadgets/jetpack/jetpack sustain end.ogg" id="5_6p5pu"]

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_icpl7"]
loop = false
stream_count = 4
stream_0 = ExtResource("2_0d65a")
stream_1 = ExtResource("3_h0h1d")
stream_2 = ExtResource("4_4rqsq")
stream_3 = ExtResource("5_6p5pu")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ikti3"]
size = Vector2(32, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yotyk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yotyk"]
radius = 16.0

[node name="Jetpack" type="RigidBody2D"]
collision_layer = 4
mass = 0.001
lock_rotation = true
script = ExtResource("1_ik27r")
audio_playlist = SubResource("AudioStreamPlaylist_icpl7")

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(16, -16, 8, -16, 8, -8, -8, -8, -8, -16, -16, -16, -16, 24, -8, 24, -8, 16, 8, 16, 8, 24, 16, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_ikti3")

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(8, 40)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -16.0
offset_right = 32.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 4
value = 100.0
fill_mode = 3
show_percentage = false

[node name="InteractableArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea"]
position = Vector2(-32, 8)
shape = SubResource("RectangleShape2D_yotyk")
debug_color = Color(1, 1, 1, 0.42)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="InteractableArea"]
position = Vector2(32, 8)
shape = SubResource("RectangleShape2D_yotyk")
debug_color = Color(1, 1, 1, 0.42)

[node name="CollisionShape2D4" type="CollisionShape2D" parent="InteractableArea"]
visible = false
position = Vector2(0, -32)
shape = SubResource("RectangleShape2D_yotyk")
debug_color = Color(1, 1, 1, 0.42)

[node name="PlayerArea" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yotyk")
disabled = true

[node name="Debug" type="Label" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -15.817

[node name="EquipAudioStream" type="AudioStreamPlayer2D" parent="."]
